Fixed About Me bug, realigned Demo Cards, Set up About me Links.

--- a/src/components/Layout/About/about.css
+++ b/src/components/Layout/About/about.css
@@ -7,6 +7,7 @@
   word-wrap: break-word;
 
   color: black;
+  /* background-color: pink; */
 }
 
 .AboutIMG {
@@ -17,11 +18,12 @@
 
 @media screen and (max-device-width: 750px) {
   .AboutIMG {
-    width: 40%;
+    width: 30%;
+    background-color: red;
   }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 750px) and (max-height: 640px) {
   .AboutIMG {
     width: 40%;
   }
@@ -32,25 +34,24 @@
   margin-top:50px;
   margin-left: 0px;
   padding-left: 0px;
-  width: 30%;
+  width: 20%;
   border-radius: 25px;
-  /* background-color:red; */
+  
 }
 
 .About-info-right {
   float: right;
   margin-top: 50px;
-  width: 30%;
+  width: 20%;
   border-radius: 25px;
-  /* background-color:red; */
 }
 
 .About-links {
-  margin-top: 50px;
+  margin-top: 30px;
   background-color: darkslategray;
   border: 4px solid black;
   border-radius: 25px;
-  width: 100%;
+  width: 80%;
   /* height: 82px; */
   color: white;
 
