--- a/src/components/Layout/Demos/DemoCard/demoCard.css
+++ b/src/components/Layout/Demos/DemoCard/demoCard.css
@@ -6,6 +6,8 @@
   margin: 8px;
   margin-bottom: 16px;
   box-shadow: 15px 15px 10px black;
+
+  border: 2px solid black;
 }
 
 .btn-group :hover {
@@ -18,16 +20,23 @@
 
 .card-title {
   background-color:#282C34;
+  text-shadow: 2px 2px 2px rgb(0, 0, 0);
   border-radius: 25px;
   width: 80%;
+  padding: 3px;
   margin: 10px 30px 10px 30px;
 }
 
 .btn-group button{
   margin: 10px;
+  box-shadow: 4px 4px 8px black;
 }
 
 .card-box img {
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+
+  border-bottom: 2px solid black;
   width: 100%;
   height: 250px;
 }
